# terra-engine

./: .gitignore  CMakeLists.txt  LICENSE  main.cpp
drivers/opengl/: CMakelists.txt  terra-opengl.hpp
src/: main.cpp
src/core/ecs/: archetypes.hpp  entity-manager.cpp  entity-manager.hpp
src/core/ecs/component/: component-storage.hpp  component_manager.hpp  components.hpp
src/core/engine/: engine.cpp  engine.hpp  game.hpp
src/core/input/: input.cpp  input.hpp  input_action.cpp  input_action.hpp
src/core/math/: matrix4.hpp  vector2.hpp  vector3.hpp  vector4.hpp
src/core/object/: class.hpp  object.cpp  object.hpp
src/core/renderer/: render_queue.cpp  render_queue.hpp  renderer.cpp  renderer.hpp
src/core/renderer/data/: renderer_texture_2d.cpp  renderer_texture_2d.hpp
src/core/renderer/sprite/: sprite_render_queue.cpp  sprite_render_queue.hpp  sprite_renderer.cpp  sprite_renderer.hpp
src/core/renderer/sprite/shaders/: CMakeLists.txt  sprite_shaders.h  sprite_vertex.glsl
src/core/resources/: resource.cpp  resource.hpp  resource_loader.cpp  resource_loader.hpp  resource_manager.cpp  resource_manager.hpp  texture.cpp  texture.hpp
src/core/resources/shader/: shader_loader.cpp  shader_loader.hpp  shader_resource.cpp  shader_resource.hpp
src/core/resources/texture/: texture_loader.cpp  texture_loader.hpp  texture_resource.cpp  texture_resource.hpp
src/core/shader/: shader_program.cpp  shader_program.hpp
src/core/shader/resources/: CMakeLists.txt  default_frag.glsl  default_shaders.h  default_vertex.glsl  embed_shader.cmake
src/core/window/: key.hpp  window.cpp  window.hpp
src/drivers/opengl/: CMakelists.txt
src/misc/: stb_image.cpp
src/misc/dense_array/: dense_array.hpp
src/misc/error/: error.cpp  error.h  error.hpp
src/misc/packed_array/: packed_array.hpp
third-parties/glad/include/glad/: glad.h
third-parties/glad/src/: glad.c
